--- a/app/views/moderation/index.html.erb
+++ b/app/views/moderation/index.html.erb
@@ -6,9 +6,13 @@
     width: 20px;
     height: 20px;
   }
-  input[type="text"] {
-    width: 60px;
+  .moderation input[type="text"], select {
+    width: 70px;
   }
+		.moderation select {
+			 height: 50px;
+				vertical-align: middle
+		}
   button {
       padding: 3px;
       display: inline-block;
@@ -25,7 +29,10 @@
   button:hover {
       color: #666;
   }
-		
+		.moderation label {
+			display: inline-block;
+			width: 50px;
+		}
 .mbMiniPlayer.mySkin table span.map_play{border-left:1px solid #333333;}
 .mbMiniPlayer.mySkin table span.map_volume{border-right:1px solid #000000;}
 .mbMiniPlayer.mySkin table span.map_volume.mute{color: #cccccc;}
@@ -43,9 +50,11 @@
     <li class="TabbedPanelsTab listen" tabindex="0">
       <a href="#" class="listen">Listen</a>
     </li>
+				<!--
     <li class="TabbedPanelsTab publish" tabindex="0">
       <a href="#" class="publish">Publish</a>
     </li>
+				-->
     <li class="TabbedPanelsTab syndicate" tabindex="0">
       <a href="#" class="syndicate">Syndicate</a>
     </li>
@@ -55,7 +64,7 @@
       <%= render :partial=>'listen' %>
     </div>
     <div class="TabbedPanelsContent publish">
-      <%= render :partial=>'publish' %>
+      <%#= render :partial=>'publish' %>
     </div>
     <div class="TabbedPanelsContent syndicate">
       <%= render :partial=>'syndicate' %>
