--- a/app/views/moderation/_search_results.html.erb
+++ b/app/views/moderation/_search_results.html.erb
@@ -34,7 +34,7 @@ jQuery(document).ready(function(){
     $('.audio2').mb_miniPlayer({
        width:240,
        inLine:false,
-       id3:true
+       id3:false
     });
 });
 </script>
