--- a/app/views/moderation/_syndicate.html.erb
+++ b/app/views/moderation/_syndicate.html.erb
@@ -1,1 +1,47 @@
-Syndicate Contents
+<table id="Asearch-results-id">
+<% if  @syndicated.size > 0 %>
+<%= paginate  @syndicated %>
+<thead>
+      <tr>
+        <th>Message</th>
+        <th>Branch</th>
+								<th>Created</th>
+        <th>Country/Location</th>
+        <th>Contact</th>
+      </tr>
+</thead>
+<tbody>
+<%  @syndicated.each do |e| %>
+<tr>
+   <td>
+  <a id='<%=e.id%>' class="audio3 {ogg:'http://www.miaowmusic.com/ogg/Miaow-02-Hidden.ogg',autoplay:false, inLine:true}"
+       href='<%=e.soundkloud.url %>'><%= e.soundkloud.url %></a>
+   </td>
+   <td>
+      <%= e.branch.name %>
+   </td>
+			<td>
+      <%= e.created_at.to_s(:db) %>
+   </td>
+   <td>
+      <%= e.branch.country.name %>
+   </td>
+   <td>
+      <%= e.branch.contact %>
+   </td>
+</tr>
+<% end %>
+</tbody>
+</table>
+<script>
+jQuery(document).ready(function(){
+    $('.audio3').mb_miniPlayer({
+       width:240,
+       inLine:false,
+       id3:false
+    });
+});
+</script>
+<% else %>
+
+<% end %>
