ajax update paginate page

--- a/app/views/moderation/index.html.erb
+++ b/app/views/moderation/index.html.erb
@@ -50,7 +50,7 @@
 				<span id="publish-to-dropbox"></span>
   </ul>
   <div class="TabbedPanelsContentGroup">
-    <div class="TabbedPanelsContent listen">
+    <div id="listen" class="TabbedPanelsContent listen">
       <%= render :partial=>'listen' %>
     </div>
 				<!--
@@ -58,7 +58,7 @@
       <%#= render :partial=>'publish' %>
     </div>
 				-->
-    <div class="TabbedPanelsContent syndicate">
+    <div id="syndicate" class="TabbedPanelsContent syndicate">
       <%= render :partial=>'syndicate' %>
     </div>
   </div>
