--- a/app/views/moderation/_listen.html.erb
+++ b/app/views/moderation/_listen.html.erb
@@ -1,9 +1,14 @@
 <% @entries.each do |e| %>
   <%= e.branch.name %> <%= e.created_at.to_s(:db) %>
-  <a id="<%=e.id%>" class="audio {ogg:'http://www.miaowmusic.com/ogg/Miaow-07-Bubble.ogg', downloadable:false,autoplay:false, inLine:true}"
-       href="/entries/<%=e.id%>/play"><%= e.dropbox_file %></a>
-		<button onclick="$('#<%=e.id%>').mb_miniPlayer_stop()">stop</button>
-  <button onclick="$('#<%=e.id%>').mb_miniPlayer_play()">play</button>
+		  <% if e.dropbox_file_exists? %>
+      <a id="<%=e.id%>" class="audio {ogg:'/entries/<%=e.id%>/play',downloadable:false,autoplay:false, inLine:true}"
+         href="/entries/<%=e.id%>/play"><%= e.dropbox_file %>
+						</a>
+						<button onclick="$('#<%=e.id%>').mb_miniPlayer_stop();">stop</button>
+      <button onclick="$('#<%=e.id%>').mb_miniPlayer_play();">play</button>
+    <% else %>
+				   <%= "#{e.dropbox_file} Not Found" %>
+				<% end %>
 		<% title1 = !!e.is_private ? 'Message is public' : 'Make Dropbox file public' %>
 		<% title2 = !!e.soundkloud ? 'Message is in SoundCloud' : 'Syndicate Dropbox file to SoundCloud' %>
 		<span title="<%= title1 %>" class="publish-syndicate"><a id='P<%= e.id %>' data-url="/moderation/<%= e.id %>/edit/?publish=1">Publish</a></span>
