--- a/app/views/moderation/_search_results.html.erb
+++ b/app/views/moderation/_search_results.html.erb
@@ -14,8 +14,12 @@
 <% @results.each do |e| %>
 <tr>
    <td>
-  <a id='<%=e.id%>' class="audio2 {ogg:'http://www.miaowmusic.com/ogg/Miaow-02-Hidden.ogg',autoplay:false, inLine:true}"
+   	<% if e.dropbox_file_exists? %>
+      <a id='<%=e.id%>' class="audio2 {ogg:'/entries/<%=e.id%>/play',autoplay:false, inLine:true}"
        href='/entries/<%=e.id%>/play'><%= e.dropbox_file %></a>
+				<% else %>
+				   <%= "#{e.dropbox_file} Not Found" %>
+				<% end %>
    </td>
    <td>
       <%= e.branch.name %>
