--- a/app/views/shared/_side_nav.html.erb
+++ b/app/views/shared/_side_nav.html.erb
@@ -1,5 +1,5 @@
 <ul>
-<li><a href="index.html" class="logo"></a></li>
+<li><a href="/" class="logo"></a></li>
 <li><a href="#" class="login">Log in or Sign up</a></li>
 <li class="left-nav-bar" data-url="/moderation"><a class="moderation">Moderation</a></li>
 <li class="left-nav-bar" data-url="/branch"><a class="branch-configuration">Branch Configuration</a></li>
