--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= javascript_include_tag 'application.js' %>
     <%#= javascript_include_tag 'main.js' %>
     <%= stylesheet_link_tag "all" %>
+				<%= stylesheet_link_tag('print', :media => :print) %>
     <%= csrf_meta_tags %>
     <%= yield :head %>
   </head>
