add reports, health check edit, Health.populate changes

--- a/app/views/healthcheck/_search_results.html.erb
+++ b/app/views/healthcheck/_search_results.html.erb
@@ -1,6 +1,6 @@
 <% @branches.each do |branch|%>
       <tr>
-        <td>
+        <td class="branch-name" id="<%= branch.id %>" data-url="/healthcheck/<%= branch.id %>/edit">
           <%= branch.name%>
         </td>
         <td>
