--- a/app/views/healthcheck/index.html.erb
+++ b/app/views/healthcheck/index.html.erb
@@ -1,9 +1,14 @@
+<% content_for :footer do %>
+  <div id="modal-window" class="helpPopUp"></div>
+<% end %>
+
 <h2>Health Check</h2>
 <%= render :partial => 'shared/google_map' %>
 <%= render :partial => 'search' %>
 <script>
 	 jQuery(document).ready(function(){
      search.init();
+		 editHealth.init();
   });
 </script>
 	
