--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>BBG IVR</title>
     <!-- <META HTTP-EQUIV="refresh" CONTENT="60" /> -->
-				<%= stylesheet_link_tag    "application", :media => "all" %>
+		<%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag 'application.js' %>
     <%#= javascript_include_tag 'main.js' %>
     <%= stylesheet_link_tag "all" %>
@@ -50,6 +50,7 @@
       </div>
       <!-- End Module -->
     </div>
+    <%= yield :footer %>
     <!-- End Wrapper -->
 				<%= yield :scripts %> <!-- (in your footer) -->
     <script>
