--- a/app/views/shared/_google_map.html.erb
+++ b/app/views/shared/_google_map.html.erb
@@ -62,7 +62,7 @@ jQuery(document).ready(function() {
         var image = {
         url: "<%= b.gmap_marker%>",
         // This marker is 20 pixels wide by 20 pixels tall.
-        size: new google.maps.Size(20,20),
+        size: new google.maps.Size(40,35),
         // The origin for this image is 0,0.
         origin: new google.maps.Point(0,0),
         // The anchor for this image is the base of the flagpole at 0,32.
@@ -73,6 +73,7 @@ jQuery(document).ready(function() {
         var marker<%=i%> = new google.maps.Marker({
             position: myLatlng,
             map: Gmaps.map.map,
+          <% if 1==0 && b.unhealth? %>  animation: google.maps.Animation.BOUNCE, <% end %>
 					  icon: image,
             title: '<%#= b.gmaps4rails_infowindow %>'
         });
