--- a/app/views/analytics/_new.erb
+++ b/app/views/analytics/_new.erb
@@ -16,7 +16,8 @@
 
     <label for="start_date">Start Date:</label>
     <input type="text" class="datepicker" id="start_date" name="start_date" value="<%= @start_date %>" />
-				<div class="separator"></div>
+		<!-- img src="/assets/calendar.gif" class="start_date" / -->
+		<div class="separator"></div>
     <label for="end_date">End Date:</label>
     <input type="text" class="datepicker" id="end_date" name="end_date" value="<%= @end_date %>" />
     <div class="separator"></div>
