--- a/app/views/analytics/_content.html.erb
+++ b/app/views/analytics/_content.html.erb
@@ -1,7 +1,7 @@
 <%= link_to_function("Print", "javascript:print()", :class=>"print-it") %>
 <h2 class="print-header"><%= @report_name %></h2>
 <span class="print-date"><%= @start_date %> - <%= @end_date %> </span>
-<table id="search-results-id">
+<table class="search-results-table">
   <thead>
     <tr>
     	<% @title.each do |f| %>
@@ -15,6 +15,28 @@
     <% @rows.each do | row | %>
     <tr>
       <% @title.each do |f| %>
+      <td>
+        <%= row[f] %>
+      </td>
+      <% end %>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+<table class="search-results-table">
+  <thead>
+    <tr>
+      <% @country_title.each do |f| %>
+      <th>
+        <%= f %>
+      </th>
+      <% end %>
+    </tr>
+  </thead>
+  <tbody>
+    <% @country_rows.each do | row | %>
+    <tr>
+      <% @country_title.each do |f| %>
       <td>
         <%= row[f] %>
       </td>
