--- a/app/views/analytics/_new.erb
+++ b/app/views/analytics/_new.erb
@@ -4,7 +4,7 @@
     <p id="error" class="error">
       <%= @error %>
     </p>
-    <%= form_tag("/reports", :method => :post, :id=>"post-report") do %>
+    <%= form_tag("/analytics", :method => :post, :id=>"post-report") do %>
     <%= hidden_field_tag "authenticity_token", "#{form_authenticity_token}" %>
 
 				<label for="branch_id">Select Branch</label>
