--- a/app/views/shared/_side_nav.html.erb
+++ b/app/views/shared/_side_nav.html.erb
@@ -1,8 +1,8 @@
 <ul>
-<li><a href="/" class="logo"></a></li>
-<li><a href="#" class="login">Log in or Sign up</a></li>
-<li class="left-nav-bar" data-url="/moderation"><a class="moderation">Moderation</a></li>
+<li><a href="/" class="logo"><img class="oddi-logo" src="/assets/images/oddi-logo.png"/></a></li>
+<!-- li><a href="#" class="login">Log in or Sign up</a></li -->
 <li class="left-nav-bar" data-url="/branch"><a class="branch-configuration">Branch Configuration</a></li>
+<li class="left-nav-bar" data-url="/moderation"><a class="moderation">Moderation</a></li>
 <li class="left-nav-bar" data-url="/analytics"><a class="analytics">Analytics</a></li>
 <li class="left-nav-bar" data-url="/healthcheck"><a class="health-check">Health Check</a></li>
 </ul>
