--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <nav>						
 <ul>
 <li><span class="last-days">(from last <%= Branch.message_time_span %> days)</span></li>
-<li><a id="calls"><%= @calls[:total] %> Number of Calls</a></li>
+<li class="left-nav-bar" data-url="/analytics"><a id="calls"><%= @calls[:total] %> Number of Calls</a></li>
 <li class="left-nav-bar" data-url="/entries"><a id="messages"><%= @messages[:total] %> Messages</a></li>
 <li class="left-nav-bar" data-url="/healthcheck"><a id="alerts"><%= @alerts[:total] %> Alerts</a></li>
 </ul>
