--- a/app/views/layouts/moderation.html.erb
+++ b/app/views/layouts/moderation.html.erb
@@ -45,7 +45,7 @@
 
 <!--This is the script to make the tabs work. It must be included right before the end body tag.-->
 <script type="text/javascript">
-  var TabbedPanels1 = new Spry.Widget.TabbedPanels("TabbedPanels1");
+    // var TabbedPanels1 = new Spry.Widget.TabbedPanels("TabbedPanels1");
 		jQuery(document).ready(function(){
 			 homePage.init("content");
 				loadSoundCloud.init();
