--- a/app/views/moderation/_search.html.erb
+++ b/app/views/moderation/_search.html.erb
@@ -9,6 +9,10 @@
     <label>
       Published
     </label>
+    <input name="moderation" type="radio" value="syndicated" />
+    <label>
+      Syndicated
+    </label>
     <input name="moderation" type="radio" value="deleted" />
     <label>
       Deleted
