--- a/app/views/moderation/index.html.erb
+++ b/app/views/moderation/index.html.erb
@@ -1,51 +1,12 @@
-<style>
-	/*
-#publish-to-dropbox {
-	 width:300px;
-		height: auto;
-}
-#soundcloud-upload h2 {
-    color: #333333;
-    font-size: 18px;
-    margin-top: 10px;
-}
-#publish-to-dropbox {
-	 margin: 0 0 0 10px;
-		font-weight: bold;
-	 display: none;
-}
-#soundcloud-upload {
-	 height: 100%;
-		width: 500px;
-	 border: 1px dotted #CCCCCC;
-		background-color: #CCCCCC;
-}
-.helpPopUp {
-    background: none repeat scroll 0 0 #FFFFFF;
-    border: 1px solid #CFE8F5;
-    border-radius: 11px 11px 11px 11px;
-    padding: 20px;
-    position: absolute;
-    text-align: center;
-				height: 360px;
-				display: none
-}
-*/
-</style>
-
 <div id="modal-window" class="helpPopUp"></div>
 <h2>Moderation</h2>
 <h3>Moderate Messages</h3>
+<!--
 <div id="TabbedPanels1" class="TabbedPanels moderation-tools">
   <ul class="TabbedPanelsTabGroup">
     <li class="TabbedPanelsTab listen" tabindex="0">
       <a href="#" class="listen">Listen</a>
     </li>
-    <!--
-    <li class="TabbedPanelsTab publish" tabindex="0">
-    <a href="#" class="publish">Publish</a>
-    </li>
-    -->
     <li class="TabbedPanelsTab syndicate" tabindex="0">
       <a href="#" class="syndicate">Syndicate</a>
     </li>
@@ -53,18 +14,14 @@
   </ul>
   <div class="TabbedPanelsContentGroup">
     <div id="listen" class="TabbedPanelsContent listen">
-      <%= render :partial=>'listen' %>
+      <%#= render :partial=>'listen' %>
     </div>
-				<!--
-    <div class="TabbedPanelsContent publish">
-      <%#= render :partial=>'publish' %>
-    </div>
-				-->
     <div id="syndicate" class="TabbedPanelsContent syndicate">
-      <%= render :partial=>'syndicate' %>
+      <%#= render :partial=>'syndicate' %>
     </div>
   </div>
 </div>
+-->
 <!-- Start Search results box. -->
 <!-- This box can be modified and used in other sections of the site. A form is used so that the radio buttons and search feature can work, but the functionality of the search feature is left up to Liwen to accomplish. -->
 <!--Moderation search results box-->
