--- a/app/views/moderation/_search_results.html.erb
+++ b/app/views/moderation/_search_results.html.erb
@@ -4,10 +4,10 @@
 <thead>
       <tr>
         <th>Message</th>
-				<th>Date</th>
-        <th>Branch</th>
-        <th>Country/Location</th>
-        <th>Contact</th>
+        <th><a id="branches.name">Branch</a></th>
+        <th><a id="entries.created_at">Date</a></th>
+        <th><a id="countries.name">Country/Location</a></th>
+        <th><a id="branches.contact">Contact</a></th>
       </tr>
 </thead>
 <tbody>
