--- a/app/views/branch/_create.html.erb
+++ b/app/views/branch/_create.html.erb
@@ -34,6 +34,20 @@
   <% options = forum_options %>
   <%= f.select :forum_type, options_for_select(options, 0), :style=>'' %>
   <p></p>
+  <% id=@branch.feed_source
+     options = [['--Select--','0'],['dropbox','dropbox'],['static_rss','static_rss']]
+    %>
+  <label for="branch_feed_source">Feed&nbsp;Source </label>
+  <%= select_tag 'branch[feed_source]', options_for_select(options, id), :style=>'' %>
+  <p></p>
+  <label for="branch_feed_url">Feed&nbsp;Url </label>
+  <% id=@branch.feed_url %>
+  <%= text_field_tag 'branch[feed_url]', id, :style=>'' %>
+  <p></p>
+  <label for="branch_limit">Feed&nbsp;limit </label>
+  <% id=@branch.feed_limit %>
+  <%= text_field_tag 'branch[feed_limit]', id, :style=>'' %>
+  <p></p>
   <label for="branch_country_id">Country </label>
   <% options = Country.all.map{|b| [b.name, b.id]} %>
   <%= f.select :country_id, options_for_select(options, 0), :style=>'' %>
