--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
 <li><span class="last-days">(from last <%= Branch.message_time_span %> days)</span></li>
 <li class="left-nav-bar" data-url="/analytics"><a id="calls"><%= @calls[:total] %> Number of Calls</a></li>
 <li class="left-nav-bar" data-url="/entries"><a id="messages"><%= @messages[:total] %> New Voice Mail</a></li>
-<li class="left-nav-bar" data-url="/healthcheck"><a id="alerts"><%= @alerts[:total] %> Alerts</a></li>
+<li class="left-nav-bar" data-url="/healthcheck"><a id="alerts"><%= @alerts[:unique] %> Alerts</a></li>
 </ul>
 </nav>
 <h2>BRANCH CALLER AND ACTIVITY </h2>
