--- a/app/views/templates/_upload.html.erb
+++ b/app/views/templates/_upload.html.erb
@@ -33,7 +33,7 @@
   <h3><% if !!template.audio_link %>
     You have uploaded a file previously<br/>
     <% end %>
-    Select your <%= template.name_map(template.name) %> file to upload</h3>
+    Select your <%= template.name_map(template.name) %> audio file to upload</h3>
   <div class='fileBrowseWrap'>
     <%= f.file_field :sound %>
   </div>
