adjust the page vertical-align

--- a/app/views/templates/_vote.html.erb
+++ b/app/views/templates/_vote.html.erb
@@ -1,2 +1,2 @@
-<div id="introduction" class="square">Intro</div>
-<div id="candidate" class="square"><%= @question %></div>
+<div id="introduction" class="square"><span>Intro</span></div>
+<div id="candidate" class="square"><span><%= @question %></span></div>
