--- a/app/views/templates/_bulletin.html.erb
+++ b/app/views/templates/_bulletin.html.erb
@@ -1,5 +1,5 @@
-<div id="introduction" class="square">Intro</div>
-<div id="bulletin_question" class="square"><%= @question %></div>
+<div id="introduction" class="square"><span>Intro</span></div>
+<div id="bulletin_question" class="square"><span><%= @question %></span></div>
 <!--
 <div id="listen_bulletin_board" class="square"><%= @listen_bulletin %></div>
 <div id="record_bulletin_board" class="square"><%= @record_bulletin %></div>
