fix mm-246 Analytics: Generate html of All Branches Over 7 Days by default

--- a/app/views/analytics/_new.erb
+++ b/app/views/analytics/_new.erb
@@ -31,7 +31,9 @@
 		  <input type="button" value="Submit" id="report-submit" class="btnAction" />
     <% end %>
   </div>
-  <div id="report-results" class="search-results"></div>
+  <div id="report-results" class="search-results">
+    <%= render :partial=>'content' %>
+  </div>
 </div>
 <script type="text/javascript">
   jQuery(document).ready(function(){
