click save close the modal window

--- a/app/views/healthcheck/edit.html.erb
+++ b/app/views/healthcheck/edit.html.erb
@@ -1,5 +1,5 @@
 <div id="health-form-wrapper">
-	<h2>Edit </h2>
+	<h2>Edit Alerts</h2>
   <div id="report">
     <span id="error"></span>
     <p>
@@ -31,8 +31,8 @@
     </p>
     <p>
     
-    <input type="submit" class="btnAction" id="submit" value="Submit" />
-    <input type="submit" class="btnAction" value="Back" name="cancel" />
+    <input type="submit" class="btnAction" id="submit" value="Save" />
+    <input type="submit" class="btnAction" value="Cancel" name="cancel" />
     </p>
 			</div>
 </div>
