--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         </div>
         <!--End Branch Caller and Activity Area-->
 								<% elsif @controller == 'healthcheck' %>
-								   <%= render :partial=>'remote_desktop'%>
+								   <%= render :partial=>'remote_access'%>
 								<% end %>
 								<!-- Put your map tool here. -->
 								<div class="content" id="content">
