--- a/app/views/layouts/healthcheck.html.erb
+++ b/app/views/layouts/healthcheck.html.erb
@@ -23,7 +23,7 @@
           <%#= render :partial=>'shared/header' %>
         </div>
         --End Branch Caller and Activity Area-->
-								<%= render :partial=>'remote_desktop'%> 
+								<%= render :partial=>'remote_access'%> 
 								<!-- Put your map tool here. -->
 								<div class="content" id="content">
           <p class="alert"><%= alert %></p>
